"Enter Value" Placeholder

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div class="city">
       <p>Insert your integers in the provided text boxes below:</p>
       <label for="first">Integer #1:</label>
-      <input type="text" id="first">
+      <input type="text" id="first" placeholder="Enter Value">
       <br><br>
       <label for="second">Integer #2:</label>
-      <input type="text" id="second">
+      <input type="text" id="second" placeholder="Enter Value">
       <br><br>
       <button id="multiply">Multiply</button>
       <p id="answer"></p>
